2008-01-18  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.5:
	* Build.PL
	- fix dependency

2008-01-13  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.4:
	* lib/Catalyst/Helper/Model/Estraier.pm
	- fix POD

2007-12-09  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.3:
	* Build.PL
	- fix dependency typo

2007-12-09  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.2:
	* Build.PL
	- fix dependency

2007-12-08  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.1: created by Module::Starter