@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.3607
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -8,7 +8,6 @@ WriteMakefile
           'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/Catalyst/Model/Estraier.pm',
           'PREREQ_PM' => {
-                           'Test::Perl::Critic' => 0,
                            'Test::More' => 0,
                            'FindBin' => 0,
                            'version' => 0,
