@@ -1,3 +1,11 @@
+2010-05-15  Takeru INOUE  <takeru.inoue _ gmail.com>
+
+        * release 0.0.6:
+	* Build.PL
+	- fix dependency
+	* t/perlcritic.t
+	- check $ENV{TEST_CRITIC} whether to execute this test
+
 2008-01-18  Takeru INOUE  <takeru.inoue _ gmail.com>
 
         * release 0.0.5:
